--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1 {
 
 .price-block {
 	color: white;
-	background: #2ecc71;
+	background: rgb(46, 204, 113);
 	width: 100%;
 	padding: 4px;
 	border: none;
